{
    "name": "InputActions",
    "maps": [
        {
            "name": "Camera",
            "id": "6a5880ef-1499-41bf-ab8d-8fda5645ad89",
            "actions": [
                {
                    "name": "Pan",
                    "type": "Value",
                    "id": "2e114cde-a4e1-44c8-9d5b-149e755113fa",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Zoom",
                    "type": "Value",
                    "id": "a8821cf1-a7c9-45f3-ac0a-291b90d54054",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "37b323cb-b0c3-441d-9e1d-1fbef1bdba42",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "",
                    "action": "Pan",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "833a1c06-b28c-4fc3-aa34-0bdc82a26b3f",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "ScaleVector2(x=0.1,y=0.1)",
                    "groups": "",
                    "action": "Pan",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2c08edf7-457a-4aad-ac7b-82f5802cda63",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Ship",
            "id": "93b14135-ea06-42ee-b5e0-fe89187edaf9",
            "actions": [
                {
                    "name": "Rudder",
                    "type": "Value",
                    "id": "d91a91d4-0ee5-42f8-834c-4f17441f1fba",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RudderAlt",
                    "type": "Value",
                    "id": "2f7df281-da77-40de-ae2b-e5bcf2623b76",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PositivePropulsion",
                    "type": "Value",
                    "id": "8d7f47e7-10f1-40b0-a2da-a744bb499b48",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PositivePropulsionAlt",
                    "type": "Value",
                    "id": "c2241b4f-4884-4e0b-96c9-345c922864e4",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "NegativePropulsion",
                    "type": "Value",
                    "id": "73995f8a-9e2a-4a5f-8a9f-ff6376f91027",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "NegativePropulsionAlt",
                    "type": "Value",
                    "id": "7b08415a-f7c3-45df-847b-f4e43137e04f",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d4b2154f-125d-41ea-b741-94a6d18678b8",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rudder",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "6f463d46-e0d1-49da-b816-f1038c9f3576",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rudder",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "40b74a25-aaff-4efe-8a00-17fa9916445f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rudder",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "d5ae72ed-1a40-4521-8d48-03d4dbd3e5b7",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rudder",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "292e2edc-e4bb-4e86-a1ea-53e48c0f5da6",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RudderAlt",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Arrows",
                    "id": "c6a38f23-0fb4-40da-a2fb-a81dc13412c6",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RudderAlt",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "f03ba017-01a9-4837-a6f7-950d6967ba3d",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RudderAlt",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "afbbaa7a-ed72-4a01-ad22-1b626651b631",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RudderAlt",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "1dc57be3-cbbe-47a5-829e-9db8c0e096d2",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PositivePropulsion",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a01ddcd1-41e1-4c1c-b2f8-6c0c23cc6348",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PositivePropulsion",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "80e7abd3-8630-45cd-af06-4bf7fb40d314",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PositivePropulsionAlt",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "df8d9005-cd7b-4040-b355-7124e436f030",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PositivePropulsionAlt",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2542ccd0-da5b-4bb1-af01-ea15bb2443b0",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NegativePropulsion",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b819b391-5bb1-44d5-884e-d014bd0d53a2",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NegativePropulsion",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "35488d92-c4fd-4714-8ceb-37d17b0e0e2c",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NegativePropulsionAlt",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "af13bfaa-1480-46a6-8f37-b95060c033a8",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NegativePropulsionAlt",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Debug",
            "id": "8d2094aa-c240-47d6-852a-60506566b801",
            "actions": [
                {
                    "name": "ResetButton",
                    "type": "Button",
                    "id": "9b7390df-3c7d-4e11-a343-ac2ba17f089b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "bbda5cf0-6fc7-4c22-9061-d73b27dcb022",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ResetButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "308a2120-2c04-498e-8d12-e096659ecb19",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ResetButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Mouse",
            "bindingGroup": "Mouse",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}